<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Timmo Weather</string>
    <string name="title_overview">Overview</string>
    <string name="title_detailed">Detailed View</string>
    <string name="title_forecast">16 Day Forecast</string>
    <string name="title_moon">Current Moon Phase</string>

    <string name="action_settings">Settings</string>
    <string name="action_rate">Rate</string>
    <string name="action_more">More Apps</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="name_city">City</string>
    <string name="name_updated">Last Updated: </string>
    <string name="name_condition">CONDITION</string>
    <string name="name_temperature">Temperature:</string>
    <string name="name_temperature_min">Temp Min:</string>
    <string name="name_temperature_max">Temp Max:</string>
    <string name="name_humidity">Humidity:</string>
    <string name="name_pressure">Pressure:</string>
    <string name="name_wind">Wind Speed:</string>
    <string name="name_sunrise">Sunrise:</string>
    <string name="name_sunset">Sunset:</string>
    <string name="name_hr">Hour</string>
    <string name="name_day">Day</string>

    <string name="hint_city">Type your city (E.G. London)</string>

    <string name="desc_icon_weather" tools:ignore="UnusedResources">Weather Icon</string>
    <string name="desc_location">Location</string>
    <string name="desc_refresh">Refresh</string>
    <string name="desc_moon">Moon Phase</string>

    <string name="change_city">Change city</string>
    <string name="go">GO</string>
    <string name="open_weather_map_app_id">efb7b9888b0708746bd71d6251ef709c</string>

    <string name="weather_day_sunny">&#xf00d;</string>
    <string name="weather_day_foggy">&#xf014;</string>
    <string name="weather_day_cloudy">&#xf013;</string>
    <string name="weather_day_rainy">&#xf019;</string>
    <string name="weather_day_snowy">&#xf01b;</string>
    <string name="weather_day_thunder">&#xf01e;</string>
    <string name="weather_day_drizzle">&#xf00b;</string>

    <string name="weather_night_clear">&#xf02e;</string>
    <string name="weather_night_foggy">&#xf04a;</string>
    <string name="weather_night_cloudy">&#xf086;</string>
    <string name="weather_night_rainy">&#xf028;</string>
    <string name="weather_night_snowy">&#xf02a;</string>
    <string name="weather_night_thunder">&#xf03b;</string>
    <string name="weather_night_drizzle">&#xf02b;</string>

    <string name="place_not_found">Sorry, no weather data found for:</string>
    <string name="no_location_detected" tools:ignore="UnusedResources">Could\'nt find location.</string>
    <string name="use_gps">Use GPS</string>
    <string name="welcome_message">This appears to be the first time you have used Timmo Weather.\nPlease type your city into the text box below or use GPS to automatically find your location.</string>
    <string name="welcome_sub_message">Please note that GPS will work best in when the device is outside and in daylight.</string>
    <string name="welcome_notice">You can change city later by clicking on either the GPS or city icon shown below:</string>
    <string name="northern_hemisphere">Northern Hemisphere</string>
    <string name="southern_hemisphere">Southern Hemisphere</string>

</resources>
