<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.timmo.weather.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCurrCity"
                    style="@style/textAppearanceLarge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/name_city" />

                <ImageButton
                    android:id="@+id/imageButtonRefresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/desc_refresh"
                    android:src="@drawable/ic_action_refresh" />

                <ImageButton
                    android:id="@+id/imageButtonLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/desc_location"
                    android:src="@drawable/ic_action_location" />

                <ImageButton
                    android:id="@+id/imageButtonChangeCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/change_city"
                    android:src="@drawable/ic_action_city" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewUpdated"
                style="@style/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/name_updated" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardViewCurr"
                style="?attr/cardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/linearLayoutCurrWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewCurrIcon"
                            style="@style/textAppearanceLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:text="@string/weather_day_cloudy"
                            android:textSize="100sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            tools:ignore="UselessParent">

                            <TextView
                                android:id="@+id/textViewCurrCondition"
                                style="@style/textAppearanceMedium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name_condition"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/textViewCurrTemp"
                                style="@style/textAppearanceMedium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name_temperature" />

                            <TextView
                                android:id="@+id/textViewCurrHumidity"
                                style="@style/textAppearanceMedium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name_humidity" />

                            <TextView
                                android:id="@+id/textViewCurrWind"
                                style="@style/textAppearanceMedium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name_wind" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingLeft="11dp"
                android:paddingRight="11dp"
                android:paddingTop="@dimen/activity_vertical_margin" />

        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>